k8s/40-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflare-ddns
  namespace: cloudflare-ddns
  labels:
    app.kubernetes.io/name: cloudflare-ddns
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: cloudflare-ddns
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
