k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cloudflare-ddns
  namespace: cloudflare-ddns
spec:
  selector:
    app.kubernetes.io/name: cloudflare-ddns
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
