k8s/60-ingress.yaml
# Standard Ingress -- works on any controller. Default class is `traefik` (internal).
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cloudflare-ddns
  namespace: cloudflare-ddns
  annotations:
    cert-manager.io/cluster-issuer: localca
spec:
  ingressClassName: traefik
  rules:
    - host: ddns.witschger.home
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cloudflare-ddns
                port:
                  number: 8080
  tls:
    - hosts:
        - ddns.witschger.home
      secretName: ddns-witschger-home-tls
