k8s/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cloudflare-ddns-ui
  namespace: cloudflare-ddns
  annotations:
    cloudflare-ddns.witschger.home/dns-name: "ddns.witschger.net"
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ddns.witschger.net`)
      kind: Rule
      services:
        - name: cloudflare-ddns
          port: 8080
  tls:
    secretName: witschger-net-tls
